# marketing-campaign-agent

./: .env.template  Dockerfile  README.md  add-deps.sh  pyproject.toml  requirements.txt  tavily_integration_sandbox.ipynb
config/: settings.py
data/: Sample - Superstore.xlsx  test.csv
notebooks/: Insight Aggregator.ipynb  Insight Generator and data summarizer combined.ipynb  app.py  graph_final.ipynb  graph_test.ipynb  src_graph_final.ipynb  tavily_integration_sandbox.ipynb
scripts/: run.sh
src/: app.py  graph.py  graph_final.ipynb  graph_sherry_test.ipynb  prompts.py
src/frontend/: app.py
src/nodes/: data_summarizer.py  insight_aggregator.py  query_generator.py  search_executor.py
src/orchestrator/: flow.py
