[project]
name = "marketing-campaign-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "fastapi[standard]>=0.115.14",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.25",
    "langchain-openai>=0.0.5",
    "langchain-tavily>=0.2.3",
    "langgraph>=0.4.8",
    "openai>=1.84.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.35.0",
]
