[project]
name = "marketing-campaign-agent"
version = "0.1.0"
description = "Marketing campaign analysis and recommendation agent"
requires-python = ">=3.13.4"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-tavily>=0.2.3",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
    "openpyxl>=3.1.5",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 